# opencrabs.com

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  docs.opencrabs.com  index.html  opencrabs.com  style.css
.claude/: settings.local.json
docs/: book.toml
docs/book/: 404.html  CNAME  ai.txt  changelog.html  index.html  introduction.html  llms.txt  print.html  robots.txt  searcher-c2a407aa.js  searchindex-04f68512.js  searchindex-06398ada.js  searchindex-11be15a2.js  searchindex-12a1ceaa.js  searchindex-12dd0646.js  searchindex-171b4b76.js  searchindex-1828832a.js  searchindex-18c1a552.js  searchindex-191320ee.js  searchindex-1ef0e0aa.js  searchindex-20b146fc.js  searchindex-26e068c4.js  searchindex-280a3387.js  searchindex-28b11308.js  searchindex-28db2579.js  searchindex-2d5e60da.js  searchindex-2de0da57.js  searchindex-2e3d71a6.js  searchindex-2f3b8d0e.js  searchindex-3402aa6a.js  searchindex-3451a996.js  searchindex-37b155fa.js  searchindex-39e9985f.js  searchindex-3da27de0.js  searchindex-3f3d234a.js  searchindex-402f8be3.js  searchindex-41bbca80.js  searchindex-42024407.js  searchindex-4256833b.js  searchindex-42de09a3.js  (+85 more)
docs/book/assets/: advanced-onboard.vtt
docs/book/brain/: brain-files.html  commands.html  images.html  (+4 more)
docs/src/: 404.md  SUMMARY.md  changelog.md  introduction.md  llms.txt  sitemap.xml  user-stories.md
docs/theme/: head.hbs
src/: main.rs
src/docker/: Dockerfile  docker-compose.yml  nginx.conf
src/public/: xiaomi-mimo.html
src/root-files/: 404.html  robots.txt  sitemap.xml  xiaomi-mimo.html
(+91 files in other folders)
