[package]
name = "crabsland"
version = "0.1.3"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
gloo-net = { version = "0.6", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Navigator"] }
